--- a/linux-kernelspace/hello_world/Makefile
+++ b/linux-kernelspace/hello_world/Makefile
@@ -5,6 +5,6 @@ modules:
 	$(MAKE) -C $(KERNELDIR) M=$(PWD) modules
 	@make clean
 clean:
-	rm -rf .*.ko.cmd *.mod *.mod.c .*.mod.cmd *.mod.o .*.mod.o.cmd *.o .*.o.cmd modules.order Module.symvers .tmp_versions
+	rm -rf .*.ko.cmd *.mod *.mod.c .*.mod.cmd *.mod.o .*.mod.o.cmd *.o .*.o.cmd modules.order Module.symvers .tmp_versions .cache.mk
 .PYONY: modules clean
-
+ 
