--- a/linux-kernelspace/hello_world/Makefile
+++ b/linux-kernelspace/hello_world/Makefile
@@ -6,6 +6,7 @@ modules:
 	$(MAKE) -C $(KERNELDIR) M=$(PWD) modules
 	@make clean
 clean:
-	rm -rf .*.ko.cmd *.mod *.mod.c .*.mod.cmd *.mod.o .*.mod.o.cmd *.o .*.o.cmd modules.order Module.symvers .tmp_versions .cache.mk
+	rm -rf .*.ko.cmd *.mod *.mod.c .*.mod.cmd *.mod.o .*.mod.o.cmd *.o .*.o.cmd modules.order Module.symvers .tmp_versions .cache.mk *.cmd
+
 .PYONY: modules clean
  
